# TPV

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  render.yaml
app/: __init__.py  datos_demo.py  main.py  seed.py
app/api/: admin.py  deps.py  tpv.py
app/aplicacion/: __init__.py  aparcar_venta.py  articulos.py  botoneras.py  clientes.py  convertir_en_factura_f3.py  emitir_venta.py  familias.py  generar_cierre_z.py  lineas.py  remitir_lote.py  stock.py  tipos_iva.py  usuarios.py
app/core/: config.py  db.py  redondeo.py  seguridad.py  tipos.py  validadores.py
app/dominio/: __init__.py  puertos.py
app/dominio/servicios/: __init__.py  botonera.py  validaciones_negocio.py  validadores.py
app/fiscal/: cola.py  engine.py  huella.py  qr.py  remitente.py  validacion.py  validaciones_negocio.py  xml.py
app/img_demo/: CREDITS.md
app/infraestructura/: __init__.py  config.py  db.py  imagenes.py  reloj.py
app/infraestructura/fiscal/: engine.py  qr.py  remitente.py  validacion.py  xml.py
app/infraestructura/impresion/: ticket.py
app/infraestructura/persistencia/: ddl.py  (+2 more)
app/models/: __init__.py  botonera.py  ddl.py  fiscal.py  maestros.py  operacion.py  venta.py
app/presentacion/: admin.py  deps.py  health.py  landing.py  tpv.py
app/printing/: ticket.py
app/ui/: admin.html  landing.html  tpv.html
docs/: ARCHITECTURE.md  PRESENTACION_TFM.md  TPV_ACUATPV_consideraciones.md  VERIFACTU_ESQUEMAS_HAC1177.md
docs/.obsidian/: workspace.json
docs/Verifactu/: Listado de códigos de error.md  WSDL de los servicios web.md
docs/adr/: 0001-arquitectura-hexagonal-pragmatica.md  0002-importes-decimal-en-texto.md  0003-inmutabilidad-en-base-de-datos.md  0004-numeracion-correlativa-sin-huecos.md  0005-funcion-unica-de-redondeo.md  0006-motor-fiscal-intercambiable.md  0007-huella-conforme-orden-art13.md  0008-modalidad-verifactu.md  0009-perfil-de-arranque-demo.md  README.md
migrations/: env.py
migrations/versions/: 0001_inicial.py  0002_remision.py  0003_cierre_z.py  0004_configuracion_empresa.py  0005_familia_visible_tactil.py  0006_articulo_imagen.py  0007_modo_precio_articulo.py  0008_venta_etiqueta_aparcada.py  0009_venta_cualificada.py  0010_venta_destinatario_f3.py  0011_venta_trigger_campos_congelados.py  0012_cliente_nif_unico_activo.py
openspec/: config.yaml
scripts/: preparar_produccion.py
tests/: _helpers.py  conftest.py  test_admin_api.py  test_admin_ui.py  test_alembic_url.py  test_anulacion.py  test_aparcar_venta.py  test_arquitectura.py  test_articulos.py  test_auditoria_append_only.py  test_botonera_admin_api.py  test_botonera_casos_uso.py  test_botonera_dominio.py  test_botonera_repositorio.py  test_cadena.py  test_cierre_z_api.py  test_cierre_z_concurrencia.py  test_cierre_z_f3_sustitucion.py  test_cierre_z_generar.py  test_cierre_z_inmutabilidad.py  test_cierre_z_modelos.py  test_cierre_z_repositorio.py  test_cierre_z_snapshot.py  test_clientes.py  test_clientes_tpv.py  test_cola_remision.py  test_config.py  test_config_empresa.py  test_convertir_en_factura_f3.py  test_deps.py  test_emitir_venta.py  test_envelope.py  test_esquema.py  test_estatico_nocturne.py  test_facturas_admin_api.py  test_familia_arbol.py  test_familias.py  test_health.py  test_huella_vectores.py  test_imagenes.py  (+29 more)
tests/golden/: respuesta_aeat_duplicados_mixta.xml
(+117 files in other folders)
