[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tpv-bizkaitropik"
version = "0.1.0"
description = "TPV tactil monopuesto para acuariofilia; SIF sujeto al RRSIF, preparado para VERI*FACTU."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "lxml>=5.2",
    "segno>=1.6",
    "requests>=2.32",
    "python-escpos>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
# Import/export Excel (fase posterior).
excel = [
    "openpyxl>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
