[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tpv-bizkaitropik"
version = "0.1.0"
description = "TPV tactil monopuesto para acuariofilia; SIF sujeto al RRSIF, preparado para VERI*FACTU."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "lxml>=5.2",
    "segno>=1.6",
    "requests>=2.32",
    "python-escpos>=3.1",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "import-linter>=2.0",
]
# Import/export Excel (fase posterior).
excel = [
    "openpyxl>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

# --- Regla de dependencias hexagonal (import-linter) ---
# Nota (ADR-0001, pragmatico): aplicacion SI importa infraestructura (entidades ORM como
# entidades de dominio, y serializacion del sobre delegada en infra). Por eso no se prohibe
# aplicacion->infraestructura. El dominio es puro EN RUNTIME; los unicos cruces son type
# hints bajo TYPE_CHECKING (los puertos y validaciones tipan entidades ORM), que se ignoran
# explicitamente porque no son dependencias reales de ejecucion.
[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "El dominio es puro en runtime (no depende de otras capas)"
type = "forbidden"
source_modules = ["app.dominio"]
forbidden_modules = ["app.aplicacion", "app.infraestructura", "app.presentacion"]
ignore_imports = [
    "app.dominio.puertos -> app.infraestructura.persistencia.modelos.maestros",
    "app.dominio.puertos -> app.infraestructura.persistencia.modelos.fiscal",
    "app.dominio.puertos -> app.infraestructura.persistencia.modelos.operacion",
    "app.dominio.puertos -> app.infraestructura.persistencia.modelos.venta",
    "app.dominio.puertos -> app.infraestructura.persistencia.modelos.cierre_z",
    "app.dominio.servicios.validaciones_negocio -> app.infraestructura.fiscal.xml",
]

[[tool.importlinter.contracts]]
name = "Nadie depende de la capa de presentacion"
type = "forbidden"
source_modules = ["app.dominio", "app.aplicacion", "app.infraestructura"]
forbidden_modules = ["app.presentacion"]

[[tool.importlinter.contracts]]
name = "La infraestructura no depende de aplicacion ni presentacion"
type = "forbidden"
source_modules = ["app.infraestructura"]
forbidden_modules = ["app.aplicacion", "app.presentacion"]
